--- a/ConsoleApp2/ConsoleApp2.csproj
+++ b/ConsoleApp2/ConsoleApp2.csproj
@@ -11,4 +11,19 @@
     <ProjectReference Include="..\Utilitaires\Utilitaires.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Ressource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Ressource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Ressource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Ressource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
